fix overflow of .thing--embed in review

--- a/app/assets/stylesheets/components/_things.scss
+++ b/app/assets/stylesheets/components/_things.scss
@@ -458,7 +458,7 @@ figure.thing--embed {
     h5 {
       font-weight: normal !important;
       margin: 0;
-      padding: 10px 3rem;
+      padding: 10px 2rem;
       text-align: center;
 
       @media (min-width: $screen-sm-min) {
