--- a/app/assets/stylesheets/views/things.css.scss
+++ b/app/assets/stylesheets/views/things.css.scss
@@ -2331,6 +2331,22 @@ html.reviews_show {
       }
     }
   }
+
+  &.tablet,
+  &.desktop {
+    @media (min-width: $screen-md) and (max-width: $screen-md-max) {
+      figure.thing--embed {
+        figcaption {
+          h5 {
+            margin: {
+              bottom: 0;
+              top: 15%;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 #invite-review-modal {
